--- a/public/the_bridge_templates/product/show.html
+++ b/public/the_bridge_templates/product/show.html
@@ -1,5 +1,14 @@
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 <div ng-controller="ProductController as productCtrl" class="row">
 <div class="ideas">
 <header class="header-image">
@@ -131,7 +140,13 @@
           <div class="col-sm-6">
             <div class="show-product">
               <div class="product">
-                <facebook-plugin></facebook-plugin>
+                <div class="fb-page"
+                  data-href="https://www.facebook.com/{{product.facebook}}"
+                  data-show-facepile="true"
+                  width="500"
+                  height="500"
+                  data-show-posts="true">loading recent facebook posts...
+                </div>
               </div>
             </div>
           </div>
