--- a/public/the_bridge_templates/release_notes/index.html
+++ b/public/the_bridge_templates/release_notes/index.html
@@ -1,27 +1,22 @@
-<div class="ideas">
-	<div class="featurette dark">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
+<div class="container">
+	<div class="ideas">
+		<div class="featurette dark">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
 						<div class="content center">
-							<script async src="https://static.medium.com/embed.js"></script><a class="m-profile" data-collapsed="false" data-width="100%" href="https://medium.com/@openFn"><i class="fa fa-spinner fa-3x fa-pulse"></i></a>
-						</div>
-				</div>
-			</div>
-<!-- 			<div class="row">
-				<div ng-controller="ReleaseNotesController as releaseNotes">
-					<div class="content">
-						<div ng-repeat="post in release_notes" ng-class-odd="'col-md-6'" ng-class-even="'row'">
-		    				<div ng-bind-html="post.title" class="rn-title"></div>
-							<div ng-bind-html="post.content" class="rn-content"></div>
+							<script async src="https://static.medium.com/embed.js"></script>
+							<a class="m-profile" data-collapsed="false" data-width="100%" href="https://medium.com/@openFn">
+								<i class="fa fa-spinner fa-3x fa-pulse"></i>
+							</a>
 						</div>
 					</div>
 				</div>
-			</div> -->
-			<div class="row">
-				<div class="col-md-12">
-					<div class="rn-content">
-						*Earlier content (including the "release notes" section) is available by clicking on "open[Fn] content" above.
+				<div class="row">
+					<div class="col-md-12">
+						<div class="rn-content">
+							<a href="https://medium.com/@openFn" target="_blank">Click here to see earlier content (including the "release notes" section) or if the <i class="fa fa-medium"></i> plugin doesn't load.</a>
+						</div>
 					</div>
 				</div>
 			</div>
