--- a/public/the_bridge_templates/release_notes/index.html
+++ b/public/the_bridge_templates/release_notes/index.html
@@ -15,7 +15,9 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="rn-content">
-							<a href="https://medium.com/@openFn" target="_blank">Click here to see earlier content (including the "release notes" section) or if the <i class="fa fa-medium"></i> plugin doesn't load.</a>
+							<div class="center">
+							<a href="https://medium.com/@openFn" target="_blank">To read earlier content and release notes, or if the <i class="fa fa-medium"></i> plugin doesn't load, please click here.</a>
+							</div>
 						</div>
 					</div>
 				</div>
