Proper addition of review through popup from product page

--- a/public/the_bridge_templates/product/show.html
+++ b/public/the_bridge_templates/product/show.html
@@ -46,8 +46,8 @@
                       </a>
                     </li>
                     <li role="presentation">
-                        <a data-toggle="modal" data-target="#review_modal" target="_blank" class="review-link">
-                          <i class="fa fa-comment fa-lg"></i> Review ({{product.reviews_count}})
+                         <a data-toggle="modal" data-target="#review_modal" target="_blank" class="review-link">
+                         <i class="fa fa-comment fa-lg"></i> Review ({{product.reviews_count}})
                         </a>
                       </form>
                     </li>
@@ -132,18 +132,21 @@
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           <h4 class="modal-title" id="myModalLabel">Submit a review for {{product.name}}.</h4>
         </div>
-        <div class="modal-body center">          
+        <div class="modal-body center">
           <span class="mb-title">Your</span> reviews are what drive the community. Thanks for taking the time to open-source your knowledge of {{product.name}}.
           <br>
           <br>
-          <form method="post" action="BLAH">
-            <input type="string" name="text" placeholder="something thougtful and helpful" style="color: red;">
+          <form method="post" action="/products/2/review/new">
+            <span><strong>*Write Review (116 chars).</strong></span><br><br>
+            <textarea rows="10" cols="50" name="review" placeholder="something thougtful and helpful" style = "color: red;" class="fsField fsRequired fsTextAreaMaxLength", maxlength = "116"></textarea>
             <br>
             <br>
-            <input type="integer" name="rating" placeholder="0-5" style="color: red;">
+            <span><strong>*Ratings (0-10).</strong></span><br><br>
+            <input type="integer" name="rating" placeholder="0-10" style="color: red;" class="fsField fsRequired fsTextAreaMaxLength", maxlength = "116">
             <br>
             <br>
-            <button class="btn btn-success" type="submit">done</button>
+            <button class="btn btn-success" type="submit">Submit</button>
+          <br>
           <br>
           Thanks for your time.
         </div>
