--- a/public/the_bridge_templates/product/show.html
+++ b/public/the_bridge_templates/product/show.html
@@ -106,6 +106,9 @@
                         <div ng-repeat="tag in product.tag_list" class="tag label label-info">
                           {{tag}}
                         </div>
+                        <a data-toggle="modal" data-target="#tag_modal" class="edit-link">
+                        Add/Edit Tags
+                      </a>
                       </div>
                     </div>
                   </div>
@@ -317,4 +320,35 @@
     </div>
   </div>
 </div>
+</div>
+
+<div class="modal fade" id="tag_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="featurette dark">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">Submit a review for {{product.name}}.</h4>
+        </div>
+        <div class="modal-body center">
+          <span class="mb-title">Your</span> reviews are what drive the community. Thanks for taking the time to open-source your knowledge of {{product.name}}.
+          <br>
+          <br>
+          <form method="post" action="{{'/products/'+product.id+'/review/new'}}">
+            <span><strong>*Write Review (116 chars).</strong></span><br><br>
+            <textarea rows="10" cols="50" name="review" placeholder="something thougtful and helpful" style = "color: red;" class="fsField fsRequired fsTextAreaMaxLength", maxlength = "116"></textarea>
+            <br>
+            <br>
+            <span><strong>*Ratings (0-10).</strong></span><br><br>
+            <input type="integer" name="rating" placeholder="0-10" style="color: red;" class="fsField fsRequired fsTextAreaMaxLength", maxlength = "116">
+            <br>
+            <br>
+            <button class="btn btn-success" type="submit">Submit</button>
+          <br>
+          <br>
+          Thanks for your time.
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
