--- a/public/the_bridge_templates/product/show.html
+++ b/public/the_bridge_templates/product/show.html
@@ -142,17 +142,20 @@
           <span class="mb-title">Your</span> reviews are what drive the community. Thanks for taking the time to open-source your knowledge of {{product.name}}.
           <br>
           <br>
-          <form method="post" action="{{'/products/'+product.id+'/review/new'}}">
+          <form method="post">
             <span><strong>*Write Review (116 chars).</strong></span><br><br>
-            <textarea rows="10" cols="50" name="review" placeholder="something thougtful and helpful" style = "color: red;" class="fsField fsRequired fsTextAreaMaxLength", maxlength = "116"></textarea>
+            <textarea ng-model = "post.review" rows="10" cols="50" name="review" placeholder="something thougtful and helpful" style = "color: red;" class="fsField fsRequired fsTextAreaMaxLength", maxlength = "116"></textarea>
             <br>
             <br>
             <span><strong>*Ratings (0-10).</strong></span><br><br>
-            <input type="integer" name="rating" placeholder="0-10" style="color: red;" class="fsField fsRequired fsTextAreaMaxLength", maxlength = "116">
+            <input ng-model = "post.rating" type="integer" name="rating" placeholder="0-10" style="color: red;" class="fsField fsRequired fsTextAreaMaxLength", maxlength = "116">
             <br>
             <br>
-            <button class="btn btn-success" type="submit">Submit</button>
+            <button ng-click = "submitReview(product)" class="btn btn-success" type="submit">Submit</button>
           <br>
+          <br>
+          <div ng-show = "duplicate_status" class = "submitStatus">*You have already submitted review for this Product</div>
+          <div ng-show = "success_status" class = "submitStatus">*Your Review is successfully submitted</div>
           <br>
           Thanks for your time.
         </div>
