styles and color overhaul

--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -12,8 +12,7 @@
   </header>
 
   <div class="featurette dark">
-    <hr class="light">
-    <hr class="dark">
+
     <div class="container">
       <div ng-controller="MarketplaceController as marketplace" class="row">          
         <div class="col-md-10 col-md-offset-1">
@@ -23,13 +22,13 @@
         </div>
         <div class="col-md-10 col-md-offset-1">  
           <div class="new-product-link">
-            <label style="float: left;" data-toggle="modal" data-target="#add_modal" class="btn btn-open">
+            <label style="float: left;" data-toggle="modal" data-target="#add_modal" class="btn btn-primary">
               <i class="fa fa-plus"></i> Add a new technology.
             </label>
-            <label style="margin-left: 1em;" data-toggle="modal" data-target="#help_modal" class="btn btn-open">
+            <label style="margin-left: 1em;" data-toggle="modal" data-target="#help_modal" class="btn btn-primary">
               <i class="fa fa-question-circle"></i> Help.
             </label>
-            <label style="float: right;" class="btn btn-open" ng-model="searchFilters.integrated" btn-checkbox>
+            <label style="float: right;" class="btn btn-info" ng-model="searchFilters.integrated" btn-checkbox>
                 <i class="fa fa-plug"></i>  Show integrated technologies.
             </label>
           </div>
@@ -42,18 +41,14 @@
         </div>
         <div class="product-list row" ontouchstart="this.classList.toggle('hover');">
           <br>
-          <div ng-repeat="product in products | filter:filterProducts " class="product-container col-lg-6 col-md-6 col-sm-6 col-xs-12">
+          <div ng-repeat="product in products | filter:filterProducts " class="product-container col-lg-4 col-md-4 col-sm-6 col-xs-12">
             <a class="tile" href="/#/product/{{product.id}}">
               <div class="product">
                 <div class='rating'>
                   <span class='live'>
-                  <i class="fa fa-star-o"></i>
-                  <i class="fa fa-star-o"></i>
-                  <i class="fa fa-star-o"></i>
-                  <i class="fa fa-star-o"></i>
-                  <i class="fa fa-star-o"></i>
+                  <i class="fa fa-star"></i>
                   </span>
-                  &nbsp;(0)
+                  &nbsp;({{product.reviews_count}})
                 </div>
                 <h3 class="title">
 
@@ -69,7 +64,7 @@
                   <i class="fa fa-plug"></i>
                 </a>
                 <a ng-hide="product.integrated" class="vote-count">
-                  <span style="color: #F2EFE6"><i class="fa fa-plug"></i>+ </span> {{product.votes_count}}<span style="color: #F2EFE6"></span>
+                  <i class="fa fa-plug"></i>+ {{product.votes_count}}
                 </a>
                 <a ng-click="changeVoteFor(product)" class="vote-link" ng-show="!product.integrated">               
                   <i ng-class="{'fa ' : true, 'fa-chevron-down' : product.hasVoteForUser, 'fa-chevron-up' : !product.hasVoteForUser}"></i>
