--- a/public/the_bridge_templates/product/show.html
+++ b/public/the_bridge_templates/product/show.html
@@ -32,7 +32,7 @@
                       <i class="fa fa-star-o"></i>
                     </span>
                     <span class="little" >
-                      ({{product.rating}})
+                      ({{product.reviews_count}})
                     </span>
                     <br>
                     {{product.name}}
@@ -40,7 +40,7 @@
                   <br>
                   <br>
                   <ul class="nav nav-pills nav-justified right-pills">
-                    <li role="presentation" class="active">
+                    <li role="presentation">
                       <a data-toggle="modal" data-target="#edit_modal" class="edit-link">
                         <i class="fa fa-edit fa-lg"></i> Edit
                       </a>
