--- a/public/the_bridge_templates/release_notes/index.html
+++ b/public/the_bridge_templates/release_notes/index.html
@@ -6,7 +6,7 @@
 					<div class="col-md-12">
 						<div class="content center">
 							<script async src="https://static.medium.com/embed.js"></script>
-							<a class="m-profile" data-collapsed="false" data-width="100%" href="https://medium.com/@openFn">
+							<a class="m-profile" data-collapsed="false" data-border="false" data-width="100%" href="https://medium.com/@openFn">
 								<i class="fa fa-spinner fa-3x fa-pulse"></i>
 							</a>
 						</div>
