--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -6,7 +6,7 @@
       <h3>Technology isn't the answer,<br>but it shouldn't be the problem.</h3>
     </div>
 
-    <div class="row hidden-xs" style="height: 350px"></div>
+    <!-- <div class="row hidden-xs" style="height: 350px"></div> -->
 
     <div class="row">
       <div class="col-xs-6 col-sm-2 col-sm-offset-2">
@@ -33,7 +33,7 @@
       <div class="col-xs-6 col-sm-2">
         <div class="headline numbers">
           <h3>{{orgCount}}</h3>
-          <h4>USERS</h4>
+          <h4>ORGANIZATIONS</h4>
         </div>
       </div>
     </div>
@@ -46,8 +46,6 @@
 
   <div class="featurette" id="marketplace">
 
-    <hr class="dark">
-    <hr class="light">
     <div class="container">
   
       <a href="#/marketplace/">
@@ -76,8 +74,7 @@
   </div>
 
   <div class="featurette dark" id="integrations">
-    <hr class="light">
-    <hr class="dark">
+
     <div class="container">
 
       <a href="/mappings" ng-click="$event.stopPropagation()">
@@ -99,7 +96,7 @@
             <br>
             <p>
               <a href="#/marketplace/" style="color: #384D5C;">
-                +<i class="fa fa-cube"></i> Vote to connect new technologies.
+                +<i class="fa fa-plug"></i> Vote to connect new technologies.
               </a>
             </p>
           </div>
@@ -110,8 +107,7 @@
   </div>
 
   <div class="featurette" id="marketplace">
-    <hr class="dark">
-    <hr class="light">
+
     <div class="container">
 
       <a href="#/release-notes">
@@ -122,7 +118,7 @@
           </div>
           <div class="col-md-6 col-md-pull-6">
             <h2 class="featurette-heading">
-              open<strong>Ideas</strong> promote conversations<br/> about technology's role in behavior change
+              open<strong>Content</strong> makes it easier<br/> to lead successful implementations.
             </h2>
             <p class="lead">
               75% of IT implementations fail. Want to learn from developers 
@@ -141,8 +137,7 @@
   </div>
 
   <div class="featurette dark">
-    <hr class="light">
-    <hr class="dark">
+
     <div class="container">
 
       <div class="row text-right">
