second host of changes

--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -28,7 +28,7 @@
             <label style="margin-left: 1em;" data-toggle="modal" data-target="#help_modal" class="btn btn-primary">
               <i class="fa fa-question-circle"></i> Help.
             </label>
-            <label style="float: right;" class="btn btn-info" ng-model="searchFilters.integrated" btn-checkbox>
+            <label style="float: right;" class="btn btn-primary" ng-model="searchFilters.integrated" btn-checkbox>
                 <i class="fa fa-plug"></i>  Show integrated technologies.
             </label>
           </div>
