--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -4,31 +4,30 @@
     <div class="header-detail">
       <div class="headline">
         <h3>Technology isn't the answer,<br>but it shouldn't be the problem.</h3>
-      </div>
-    
-    <div class="row">
+      </div>   
+      <div class="row">
       <div class="col-xs-6 col-sm-2 col-sm-offset-2">
-        <div class="headline numbers">
+        <div class="numbers">
           <h3>{{submissionCount | number }}</h3>
-          <h4>TRANSACTIONS</h4>
+          <h4>Transactions</h4>
         </div>
       </div>
       <div class="col-xs-6 col-sm-2">
-        <div class="headline numbers">
+        <div class="numbers">
           <h3>{{productPublicCount}}</h3>
-          <h4>TECHNOLOGIES</h4>
+          <h4>Technologies</h4>
         </div>
       </div>
       <div class="col-xs-6 col-sm-2">
-        <div class="headline numbers">
+        <div class="numbers">
           <h3>{{productConnectedCount}}</h3>
-          <h4>CONNECTED APPS</h4>
+          <h4>Connected Apps</h4>
         </div>
       </div>
       <div class="col-xs-6 col-sm-2">
-        <div class="headline numbers">
+        <div class="numbers">
           <h3>{{orgCount}}</h3>
-          <h4>ORGANIZATIONS</h4>
+          <h4>Organizations</h4>
         </div>
       </div>
     </div>
@@ -43,8 +42,8 @@
       <a href="#/marketplace/">
         <div class="row">
           <div class="col-md-5 col-md-offset-1 col-md-push-6">
-            <div class="openmarket-featurette-image center-block">
-            </div>
+            <!-- <div class="openmarket-featurette-image center-block"> -->
+            <!-- </div> -->
           </div>
           <div class="col-md-6 col-md-pull-6">
             <h2 class="featurette-heading">
@@ -69,8 +68,8 @@
       <a href="/mappings" ng-click="$event.stopPropagation()">
         <div class="row">
           <div class="col-md-5">
-            <div class="openintegrations-featurette-image center-block">
-            </div>
+            <!-- <div class="openintegrations-featurette-image center-block"> -->
+            <!-- </div> -->
           </div>
           <div class="col-md-6 col-md-offset-1 text-right">
             <h2 class="featurette-heading">
@@ -84,7 +83,7 @@
             </p>
             <br>
             <p>
-              <a href="#/marketplace/" style="color: #384D5C;">
+              <a href="#/marketplace/">
                 +<i class="fa fa-plug"></i> Vote to connect new technologies.
               </a>
             </p>
@@ -99,8 +98,8 @@
       <a href="#/release-notes">
         <div class="row">
           <div class="col-md-5 col-md-offset-1 col-md-push-6">
-            <div class="openideas-featurette-image center-block">
-            </div>
+            <!-- <div class="openideas-featurette-image center-block"> -->
+            <!-- </div> -->
           </div>
           <div class="col-md-6 col-md-pull-6">
             <h2 class="featurette-heading">
@@ -129,7 +128,7 @@
         </h2>
         <p class="lead">
           We grew out of <a href="http://www.verasolutions.org" target="_blank">Vera Solutions</a>,
-          technology partner to over 100 leading <em>impact-first</em> organizations in almost 40 countries,
+          technology partner to over 125 leading <em>impact-first</em> organizations in almost 40 countries,
           and have received generous support from
           <a href="http://www.echoinggreen.org" target="_blank">Echoing Green</a>,
           <a href="http://www.dasra.org" target="_blank">Dasra</a>,
